Fixed broken expandable sections, still working on horizontal dashboard visibility toggling

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ section {
     position: relative; /* For positioning the button and content */
 }
 
-.summary-header {
+#summary-header {
     display:flex;
     justify-content: space-evenly;
 }
@@ -65,6 +65,10 @@ section {
     display: none;
 }
 
+.content {
+    display: none;
+}
+
 .expanded .initially-hidden{
     display: block;
 }
@@ -82,6 +86,11 @@ section {
     margin: 0;
     padding: 0;
     font-size: 24px;
+    cursor: pointer;
+    caret-color: transparent;
+}
+
+.button {
     cursor: pointer;
     caret-color: transparent;
 }
